--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hyperlink-parser",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.2",
   "description": "The util to parse URL.",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -23,6 +23,7 @@
     "@typescript-eslint/parser": "^3.7.1",
     "eslint": "^7.5.0",
     "jest": "^26.2.1",
+    "fs-extra": "^9.0.1",
     "typescript": "^3.9.7"
   },
   "repository": {
@@ -41,9 +42,5 @@
   "bugs": {
     "url": "https://github.com/john-yuan/HyperlinkParser.js/issues"
   },
-  "homepage": "https://github.com/john-yuan/HyperlinkParser.js#readme",
-  "dependencies": {
-    "fs-extra": "^9.0.1",
-    "hyperlink-parser": "0.0.1-alpha.2"
-  }
+  "homepage": "https://github.com/john-yuan/HyperlinkParser.js#readme"
 }
